@@ -104,11 +104,40 @@ var hostHandler = {
                     'html': dom
                 });
             } else if (selectedThumbs.length > 0) {
+                var contentScript = function() {
+                    var elId = 'dijitMap';
+                    var mapEl = document.getElementById(elId);
+                    if (mapEl) {
+                        // Remove this element if it exists.
+                        mapEl.parentNode.removeChild(mapEl);
+                    }
+
+                    // Make a 'map' between the dijit hash and the objectId's
+                    // we need. The map is a dom element with a bunch of data
+                    // attributes. That lets us access this data via the
+                    // Chrome extension. DOM is shared, but JS code isn't.
+                    mapEl = document.createElement('div');
+                    mapEl.id = elId;
+                    for (var key in dijit.registry._hash) {
+                        var obj = dijit.registry.byId(key);
+                        mapEl.setAttribute('data-' + key, obj.objectId);
+                    }
+                    document.body.appendChild(mapEl);
+                };
+
+                // Run contentScript in the page context.
+                // http://stackoverflow.com/a/2303228/173630
+                var script = document.createElement('script');
+                script.appendChild(document.createTextNode(
+                    '(' + contentScript + ')();'));
+                (document.body ||
+                 document.head ||
+                 document.documentElement).appendChild(script);
+
                 selectedThumbs.each(function() {
+                    var id = String(this.id).split('_')[0];
                     foundImages.push({
-                        'artstorId': dijit.byId(
-                            String(this.id).split('_')[0]
-                        ).objectId,
+                        'artstorId': $('#dijitMap').data(id),
                         'sources': {},
                         'metadata': {},
                         'primary_type': 'image_fpx',
